test-project/infra/argocd/templates/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-argo-prefix
spec:
  stripPrefix:
    prefixes:
      - /argo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`example.com`) && PathPrefix(`/argo`)
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: strip-argo-prefix
